--- a/dockers/base/Dockerfile
+++ b/dockers/base/Dockerfile
@@ -1,9 +1,6 @@
 FROM python:3.9-buster
-WORKDIR /web
-ENV FLASK_APP=unterwegs/wsgi.py
-ENV FLASK_RUN_HOST=0.0.0.0
+WORKDIR /
+RUN apt-get update
+RUN apt-get -y install libmagickwand-dev ghostscript
 COPY requirements.txt requirements.txt
 RUN pip3 install -i https://pypi.douban.com/simple/ -r requirements.txt
-EXPOSE 5000
-COPY . .
-CMD ["flask", "run"]
