--- a/dockers/worker/Dockerfile
+++ b/dockers/worker/Dockerfile
@@ -1,6 +1,8 @@
-FROM python:3.9-buster
+FROM unterwegs:base
 WORKDIR /worker
+RUN apt-get install libmagickwand-dev
 COPY requirements.txt requirements.txt
 RUN pip3 install  -i https://pypi.douban.com/simple/ -r requirements.txt
 COPY . .
+COPY policy.xml /etc/ImageMagick-6/policy.xml
 CMD ["celery", "-A", "unterwegs.celery", "worker", "-l", "INFO"]
