dowgrade python to 3.8 and organize imports

--- a/dockers/worker/Dockerfile
+++ b/dockers/worker/Dockerfile
@@ -1,6 +1,6 @@
 FROM unterwegs:base
 WORKDIR /worker
-RUN apt-get -y install libmagickwand-dev ghostscript
+RUN apt-get -y install build-essential python3-dev libmagickwand-dev ghostscript
 COPY requirements.txt requirements.txt
 RUN pip3 install -i https://pypi.douban.com/simple/ -r requirements.txt
 RUN python3 -m spacy download en_core_web_md
