--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,6 +81,10 @@ services:
             - ./data/filer:/data
     lda:
         image: "mountain/lda-server:latest"
+        deploy:
+            resources:
+                limits:
+                    memory: 9g
         ports:
             - 7777:7777
         volumes:
