--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
         image: "unterwegs:base"
         build: ./dockers/base
     redis:
-        image: "redis:6.2.5-buster"
+        image: "redis:7.0.5-bullseye"
         ports:
             - 6379:6379
         volumes:
@@ -40,7 +40,7 @@ services:
             - "volume:volume"
             - "filer:filer"
     typesense:
-        image: "typesense/typesense:0.21.0"
+        image: "typesense/typesense:0.23.1"
         ports:
             - 8108:8108
         volumes:
@@ -79,23 +79,3 @@ services:
             - volume
         volumes:
             - ./data/filer:/data
-    lda:
-        image: "mountain/lda-server:latest"
-        deploy:
-            resources:
-                limits:
-                    memory: 45g
-        ports:
-            - 7777:7777
-        volumes:
-            - ./data/lda:/data
-    simbase:
-        image: "mountain/simbase:latest"
-        deploy:
-            resources:
-                limits:
-                    memory: 10g
-        ports:
-            - 7654:7654
-        volumes:
-            - ./data/simbase:/usr/local/simbase/data
