--- a/dockers/base/Dockerfile
+++ b/dockers/base/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.8-buster
+FROM python:3.11.0-bullseye
 WORKDIR /
 COPY requirements.txt requirements.txt
 RUN pip3 install -i https://pypi.douban.com/simple/ -r requirements.txt
