--- a/dockers/worker/requirements.txt
+++ b/dockers/worker/requirements.txt
@@ -1,8 +1,13 @@
-wand
-pdfminer
-pypdf2
+numpy==1.23.4
+scipy==1.9.3
 
-spacy
-spacy-lookups-data
+pdfminer==20191125
+pypdf2==2.11.1
+wand==0.6.10
 
+cython==0.29.32
+pyemd==0.5.1
+word-mover-distance==0.0.3
 
+spacy==3.4.3
+spacy-lookups-data==1.0.3
